# pixel-game

./: .gitignore  Cargo.toml  compile_errors.txt  index.html  main.js  package-lock.json  package.json  railway.toml  style.css  test_railway.js  vite.config.js
client/: index.html
game-core/: Cargo.toml  errors.txt
game-core/src/: item.rs  lib.rs  protocol.rs  render.rs  world.rs
game-server/: Cargo.toml
game-server/src/: game_world.rs  main.rs
game-wasm/: Cargo.toml
game-wasm/src/: lib.rs
src/: lib.rs  pathfind.rs  render.rs  skills.rs
static/: index.html
static/pkg/: game_wasm.d.ts  game_wasm.js  game_wasm_bg.wasm  game_wasm_bg.wasm.d.ts  package.json
