[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
futures-util = "0.3"
game-core = { path = "../game-core" }
